--- a/package.json
+++ b/package.json
@@ -31,51 +31,62 @@
   "pre-commit": [],
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
+    "@angular/animations": "^6.1.0",
     "@angular/cdk": "^6.4.1",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
     "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.1",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/platform-server": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^6.1.0",
+    "@angular/router": "^6.1.0",
     "@nguniversal/common": "^6.0.0",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "body-parser": "^1.18.3",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.7",
     "jasmine-marbles": "^0.3.1",
+    "jasmine-spec-reporter": "^4.2.1",
     "karma": "^2.0.5",
     "karma-angular": "^0.0.6",
-    "rxjs": "6.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "protractor": "^5.4.0",
+    "rxjs": "6.2.2",
     "sass-mq": "^5.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.0",
-    "@angular/cli": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/language-service": "6.0.0",
-    "@types/node": "^8.0.30",
-    "codelyzer": "^4.0.2",
-    "cpy-cli": "^1.0.1",
-    "express": "^4.15.2",
-    "http-server": "^0.10.0",
+    "@angular-devkit/build-angular": "0.7.1",
+    "@angular/cli": "6.1.1",
+    "@angular/compiler-cli": "6.1.0",
+    "@angular/language-service": "6.1.0",
+    "@types/jasmine": "^2.8.8",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^10.5.3",
+    "codelyzer": "^4.4.2",
+    "cpy-cli": "^2.0.0",
+    "express": "^4.16.3",
+    "http-server": "^0.11.1",
+    "jasmine": "^3.1.0",
     "jasmine-core": "^3.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^1.1.2",
+    "karma-jasmine-matchers": "^3.8.3",
+    "karma-requirejs": "^1.1.0",
     "karma-typescript": "^3.0.13",
     "pre-commit": "^1.2.2",
-    "reflect-metadata": "^0.1.10",
-    "ts-loader": "^4.2.0",
-    "tslint": "^5.7.0",
-    "typescript": "~2.7.2",
-    "webpack-cli": "^2.0.14"
+    "reflect-metadata": "^0.1.12",
+    "requirejs": "^2.3.5",
+    "ts-loader": "^4.4.2",
+    "tslint": "^5.11.0",
+    "typescript": "~2.9.2",
+    "webpack-cli": "^3.1.0"
   }
 }
