--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.2.0",
+    "ng2-search-filter": "^0.4.7",
     "ngx-pagination": "^3.1.1",
     "protractor": "^5.4.0",
     "rxjs": "6.2.2",
